# antropy

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/colormaps/matplotlib/: plasma.csv
src/: AntropyApp.cpp  AntropyApp.h  defines.h.in  main.cpp
src/common/: DataHelper.cpp  DataHelper.h  DirectionMaps.cpp  DirectionMaps.h  Exception.hpp  InputParams.h  InputParser.cpp  MathFuncs.cpp  MathFuncs.h  PublicTypes.h  Types.cpp  Types.h  Viewport.cpp  Viewport.h
src/image/: Image.cpp  Image.h  ImageColorMap.cpp  ImageHeader.cpp  ImageHeader.h  ImageSettings.cpp  ImageSettings.h  ImageTransformations.cpp  ImageTransformations.h  ImageUtility.cpp  ImageUtility.h  ImageUtility.tpp  SegUtil.cpp  SegUtil.h  SegUtil.tpp
src/logic/: AppData.cpp  AppData.h  AppSettings.cpp  AppSettings.h  CallbackHandler.cpp  CallbackHandler.h  Logging.cpp
src/logic/annotation/: AnnotPolygon.tpp  Annotation.cpp  Annotation.h  AnnotationGroup.cpp  AnnotationGroup.h  AnnotationHelper.cpp  AnnotationHelper.h  BezierHelper.cpp  LandmarkGroup.h  PointList.h  PointRecord.h  Polygon.cpp  Polygon.h  Polygon.tpp  SerializeAnnot.cpp  SerializeAnnot.h
src/logic/app/: CallbackHandler.cpp  CallbackHandler.h  Data.cpp  Data.h  Logging.cpp  Logging.h  Settings.cpp  Settings.h  State.cpp  State.h
src/logic/camera/: Camera.cpp  Camera.h  CameraHelpers.cpp  CameraHelpers.h  CameraTypes.cpp  CameraTypes.h  MathUtility.cpp  MathUtility.h  OrthogonalProjection.cpp  PerspectiveProjection.cpp
src/logic/interaction/: ViewHit.cpp  ViewHit.h
src/logic/serialization/: ProjectSerialization.cpp  ProjectSerialization.h
src/logic/states/: AnnotationEvents.h  AnnotationStateHelpers.cpp  AnnotationStateHelpers.h  AnnotationStateMachine.cpp  AnnotationStateMachine.h  AnnotationStates.cpp  AnnotationStates.h  FsmList.hpp
src/rendering/: ImageDrawing.cpp  ImageDrawing.h  RenderData.cpp  RenderData.h  Rendering.cpp  Rendering.h  TextureSetup.cpp  TextureSetup.h  VectorDrawing.cpp  VectorDrawing.h
src/rendering/shaders/: Correlation.fs  Correlation.vs  Difference.fs  Difference.vs  Edge.fs  Edge.vs  Image.fs  Overlay.fs
src/rendering/utility/containers/: Uniforms.cpp  Uniforms.h
src/rendering/utility/gl/: GLShaderProgram.cpp  GLShaderProgram.h  GLUniformTypes.h  GLVertexArrayObject.cpp
src/rendering/utility/math/: SliceIntersector.cpp  SliceIntersector.h
src/ui/: GuiData.cpp  GuiData.h  Headers.cpp  Headers.h  Helpers.cpp  Helpers.h  ImGuiCustomControls.cpp  ImGuiCustomControls.h  ImGuiWrapper.cpp  ImGuiWrapper.h  Popups.cpp  Popups.h  Style.cpp  Toolbars.cpp  Toolbars.h  UiControls.h  Widgets.cpp  Widgets.h  Windows.cpp  Windows.h
src/ui/imgui/imGuIZMO.quat/: imGuIZMOquat.cpp  vGizmo.h  vgMath.h
src/ui/imgui/imgui-filebrowser/: imfilebrowser.h
src/windowing/: ControlFrame.cpp  ControlFrame.h  GlfwCallbacks.cpp  GlfwCallbacks.h  GlfwWrapper.cpp  GlfwWrapper.h  Layout.cpp  Layout.h  View.cpp  View.h  WindowData.cpp  WindowData.h
